--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,15 @@
 {
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "socket.io": "^4.8.1"
   },
   "scripts": {
     "build-client": "cd ../client && npm i && npm run build",
     "pre-build": "npm i && npm run build-client",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "npx nodemon server.js"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
