--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^4.21.2",
+    "google-auth-library": "^9.15.1",
     "socket.io": "^4.8.1"
   },
   "scripts": {
