--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
     "cookie": "^1.0.2",
     "express": "^4.21.2",
     "google-auth-library": "^9.15.1",
+    "mongodb": "^6.14.2",
     "socket.io": "^4.8.1"
   },
   "scripts": {
